--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1300,6 +1300,49 @@
                                     <action selector="tappedNormalMapType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CLK-f2-CnS"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jhW-xh-E7q">
+                                <rect key="frame" x="0.0" y="338" width="320" height="180"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wKE-3E-2DJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="134.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="vqd-ZZ-9zI"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="Hwe-yA-HId"/>
+                                        </connections>
+                                    </tableView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Wg-Wf-8Xi">
+                                        <rect key="frame" x="10" y="139.5" width="265" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="Bmw-89-yoL"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bD-to-a8h">
+                                        <rect key="frame" x="280" y="140" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="0rW-LE-UFW"/>
+                                            <constraint firstAttribute="width" constant="35" id="JxD-ji-0Pe"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="wKE-3E-2DJ" firstAttribute="top" secondItem="jhW-xh-E7q" secondAttribute="top" id="3Lr-tV-Nz6"/>
+                                    <constraint firstAttribute="trailing" secondItem="0bD-to-a8h" secondAttribute="trailing" constant="5" id="8hd-py-Ilp"/>
+                                    <constraint firstAttribute="bottom" secondItem="0bD-to-a8h" secondAttribute="bottom" constant="5" id="9Vw-vg-In2"/>
+                                    <constraint firstItem="0bD-to-a8h" firstAttribute="leading" secondItem="9Wg-Wf-8Xi" secondAttribute="trailing" constant="5" id="JzZ-Bx-Xup"/>
+                                    <constraint firstAttribute="height" constant="180" id="K6w-sg-GhY"/>
+                                    <constraint firstItem="9Wg-Wf-8Xi" firstAttribute="leading" secondItem="jhW-xh-E7q" secondAttribute="leading" constant="10" id="Xol-Bw-CcH"/>
+                                    <constraint firstItem="0bD-to-a8h" firstAttribute="centerY" secondItem="9Wg-Wf-8Xi" secondAttribute="centerY" id="ZcA-Wt-zWG"/>
+                                    <constraint firstAttribute="trailing" secondItem="wKE-3E-2DJ" secondAttribute="trailing" id="hvJ-0q-0Q8"/>
+                                    <constraint firstItem="9Wg-Wf-8Xi" firstAttribute="top" secondItem="wKE-3E-2DJ" secondAttribute="bottom" constant="5" id="kIb-Y0-NQf"/>
+                                    <constraint firstItem="wKE-3E-2DJ" firstAttribute="leading" secondItem="jhW-xh-E7q" secondAttribute="leading" id="sg8-Ia-nhM"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9X-ff-LcF">
                                 <rect key="frame" x="130" y="458" width="60" height="60"/>
                                 <constraints>
@@ -1315,13 +1358,16 @@
                         <constraints>
                             <constraint firstItem="7J1-bL-8zx" firstAttribute="top" secondItem="U9X-ff-LcF" secondAttribute="bottom" id="8z5-9W-XTM"/>
                             <constraint firstItem="W9Q-Ev-QUF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="90c-38-bNl"/>
+                            <constraint firstAttribute="trailing" secondItem="jhW-xh-E7q" secondAttribute="trailing" id="9cH-HX-iuI"/>
                             <constraint firstAttribute="bottom" secondItem="7J1-bL-8zx" secondAttribute="bottom" id="AWG-ic-kRG"/>
                             <constraint firstItem="jeo-fS-Ex7" firstAttribute="width" secondItem="Ewk-ug-haI" secondAttribute="width" id="CE0-Yj-cky"/>
                             <constraint firstItem="7J1-bL-8zx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gwo-5h-Aha"/>
                             <constraint firstItem="I2Y-ue-wS3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hf1-aW-MKP"/>
+                            <constraint firstItem="jhW-xh-E7q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hw1-C3-MWr"/>
                             <constraint firstItem="IGi-cb-GhH" firstAttribute="top" secondItem="EN0-G1-lHx" secondAttribute="bottom" constant="20" id="KQd-Ge-C2h"/>
                             <constraint firstItem="jeo-fS-Ex7" firstAttribute="leading" secondItem="Ewk-ug-haI" secondAttribute="leading" id="KeT-pr-5PX"/>
                             <constraint firstItem="jeo-fS-Ex7" firstAttribute="top" secondItem="Ewk-ug-haI" secondAttribute="bottom" constant="15" id="Kxg-JK-y0c"/>
+                            <constraint firstItem="7J1-bL-8zx" firstAttribute="top" secondItem="jhW-xh-E7q" secondAttribute="bottom" id="Pbs-Y6-APX"/>
                             <constraint firstItem="EN0-G1-lHx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="Qy5-hM-fbh"/>
                             <constraint firstItem="U9X-ff-LcF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bQw-AX-ADc"/>
                             <constraint firstAttribute="trailing" secondItem="7J1-bL-8zx" secondAttribute="trailing" id="gOS-pd-Jlb"/>
