--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -232,10 +232,10 @@
                                             <constraint firstItem="6aP-0D-MvR" firstAttribute="centerX" secondItem="Nnx-xr-yBt" secondAttribute="centerX" id="eoy-BQ-voI"/>
                                             <constraint firstItem="AIx-Ra-xZK" firstAttribute="leading" secondItem="Nnx-xr-yBt" secondAttribute="leading" constant="30" id="fOQ-t9-Kma"/>
                                             <constraint firstItem="3Ox-bQ-bik" firstAttribute="top" secondItem="Znq-JG-l15" secondAttribute="bottom" id="n2c-uh-lU3"/>
+                                            <constraint firstAttribute="bottom" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" id="oIl-KG-kjZ"/>
                                             <constraint firstItem="6aP-0D-MvR" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="60" id="oq1-BI-2Bj"/>
                                             <constraint firstItem="vy7-6h-lhH" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="pAd-b8-efB"/>
                                             <constraint firstItem="vy7-6h-lhH" firstAttribute="top" secondItem="AIx-Ra-xZK" secondAttribute="bottom" constant="10" id="w18-ra-Qv5"/>
-                                            <constraint firstAttribute="bottom" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" id="wS1-wI-EUo"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -255,8 +255,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="uFI-HL-iwp" secondAttribute="bottom" id="EtW-fR-fGA"/>
                             <constraint firstItem="rSL-S1-vD7" firstAttribute="top" secondItem="ahs-FQ-cd2" secondAttribute="top" id="FPA-St-Yg1"/>
+                            <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="uFI-HL-iwp" secondAttribute="bottom" id="Few-gM-Bkh"/>
                             <constraint firstAttribute="trailing" secondItem="uFI-HL-iwp" secondAttribute="trailing" id="FvV-zJ-Qoz"/>
                             <constraint firstAttribute="bottom" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="c21-O3-XjB"/>
                             <constraint firstAttribute="trailing" secondItem="rSL-S1-vD7" secondAttribute="trailing" id="d6d-PB-ELo"/>
@@ -309,7 +309,7 @@
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TWe-a7-pkX">
-                                                <rect key="frame" x="10" y="20" width="45" height="45"/>
+                                                <rect key="frame" x="10" y="30" width="45" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="45" id="lAr-oj-uPT"/>
                                                     <constraint firstAttribute="height" constant="45" id="vhK-2E-lKp"/>
@@ -431,7 +431,7 @@
                                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="top" secondItem="xX1-yL-vmD" secondAttribute="bottom" constant="10" id="tU8-rc-mCL"/>
                                             <constraint firstItem="v5j-pC-s3F" firstAttribute="centerX" secondItem="mKD-NH-3Rb" secondAttribute="centerX" id="xU9-Io-DjW"/>
                                             <constraint firstItem="v5j-pC-s3F" firstAttribute="top" secondItem="mKD-NH-3Rb" secondAttribute="top" constant="30" id="xwl-oA-MTq"/>
-                                            <constraint firstItem="TWe-a7-pkX" firstAttribute="top" secondItem="mKD-NH-3Rb" secondAttribute="top" constant="20" id="yME-oj-t12"/>
+                                            <constraint firstItem="TWe-a7-pkX" firstAttribute="top" secondItem="mKD-NH-3Rb" secondAttribute="top" constant="30" id="yME-oj-t12"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -495,7 +495,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NxM-D9-zjo">
-                                                <rect key="frame" x="10" y="20" width="45" height="45"/>
+                                                <rect key="frame" x="10" y="30" width="45" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="62V-zV-Nwb"/>
                                                     <constraint firstAttribute="width" constant="45" id="zEb-Ys-qcM"/>
@@ -592,7 +592,7 @@
                                             <constraint firstItem="vQ9-fD-Rka" firstAttribute="centerX" secondItem="voY-qY-6At" secondAttribute="centerX" id="Dhb-ef-Jhf"/>
                                             <constraint firstAttribute="trailing" secondItem="g45-vd-EQ3" secondAttribute="trailing" constant="30" id="I2h-HM-aL6"/>
                                             <constraint firstItem="vQ9-fD-Rka" firstAttribute="top" secondItem="voY-qY-6At" secondAttribute="top" constant="30" id="QK5-8f-4RR"/>
-                                            <constraint firstItem="NxM-D9-zjo" firstAttribute="top" secondItem="voY-qY-6At" secondAttribute="top" constant="20" id="TEs-sF-dq8"/>
+                                            <constraint firstItem="NxM-D9-zjo" firstAttribute="top" secondItem="voY-qY-6At" secondAttribute="top" constant="30" id="TEs-sF-dq8"/>
                                             <constraint firstItem="g45-vd-EQ3" firstAttribute="top" secondItem="vQ9-fD-Rka" secondAttribute="bottom" constant="30" id="XmY-It-hpH"/>
                                             <constraint firstItem="D7G-SG-Rpu" firstAttribute="top" secondItem="ZJf-eP-JsW" secondAttribute="bottom" constant="30" id="bqS-rY-VWT"/>
                                             <constraint firstItem="CX1-Xg-kTE" firstAttribute="leading" secondItem="g45-vd-EQ3" secondAttribute="leading" id="eiR-fP-fnA"/>
@@ -666,7 +666,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQs-Cd-17T">
-                                                <rect key="frame" x="10" y="20" width="45" height="45"/>
+                                                <rect key="frame" x="10" y="30" width="45" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="45" id="9SO-3A-Ut7"/>
                                                     <constraint firstAttribute="height" constant="45" id="vbL-gX-Sj0"/>
@@ -747,7 +747,7 @@
                                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="height" secondItem="xu9-fS-HJZ" secondAttribute="height" id="3Od-HA-kVM"/>
                                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="trailing" secondItem="xu9-fS-HJZ" secondAttribute="trailing" id="9YV-uj-KCo"/>
                                             <constraint firstItem="yBY-J7-Nhd" firstAttribute="top" secondItem="tdY-Rw-Qzd" secondAttribute="bottom" constant="40" id="9qY-Ll-l37"/>
-                                            <constraint firstItem="dQs-Cd-17T" firstAttribute="top" secondItem="eCV-0V-i7k" secondAttribute="top" constant="20" id="IFM-7A-RJJ"/>
+                                            <constraint firstItem="dQs-Cd-17T" firstAttribute="top" secondItem="eCV-0V-i7k" secondAttribute="top" constant="30" id="IFM-7A-RJJ"/>
                                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="top" secondItem="xu9-fS-HJZ" secondAttribute="bottom" constant="10" id="Sgy-Jk-i91"/>
                                             <constraint firstItem="HGF-S6-0bL" firstAttribute="trailing" secondItem="yBY-J7-Nhd" secondAttribute="trailing" id="VbT-9L-mZS"/>
                                             <constraint firstItem="wIV-Yc-ARC" firstAttribute="top" secondItem="eCV-0V-i7k" secondAttribute="top" constant="30" id="Wp4-Fu-gp4"/>
@@ -780,9 +780,9 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="eCV-0V-i7k" secondAttribute="trailing" id="640-qb-Eda"/>
-                                    <constraint firstAttribute="bottom" secondItem="cJr-x2-GNG" secondAttribute="bottom" id="7yg-as-iKa"/>
                                     <constraint firstItem="eCV-0V-i7k" firstAttribute="centerY" secondItem="80H-c0-F0u" secondAttribute="centerY" id="HAy-Ab-5hc"/>
                                     <constraint firstItem="eCV-0V-i7k" firstAttribute="centerX" secondItem="80H-c0-F0u" secondAttribute="centerX" id="HTC-Pd-V23"/>
+                                    <constraint firstAttribute="bottom" secondItem="cJr-x2-GNG" secondAttribute="bottom" id="Inb-Fb-skX"/>
                                     <constraint firstAttribute="bottom" secondItem="eCV-0V-i7k" secondAttribute="bottom" id="VQE-JJ-jte"/>
                                     <constraint firstItem="eCV-0V-i7k" firstAttribute="top" secondItem="80H-c0-F0u" secondAttribute="top" id="W8t-Sm-R78"/>
                                     <constraint firstItem="cJr-x2-GNG" firstAttribute="centerX" secondItem="80H-c0-F0u" secondAttribute="centerX" id="ZHT-nf-Bbf"/>
