--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -683,7 +683,7 @@
                                                     <constraint firstAttribute="width" constant="150" id="Bzy-1o-RbW"/>
                                                 </constraints>
                                             </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="user name" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="xu9-fS-HJZ" customClass="TextField" customModule="LocationTracking" customModuleProvider="target">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="lo" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="xu9-fS-HJZ" customClass="TextField" customModule="LocationTracking" customModuleProvider="target">
                                                 <rect key="frame" x="30" y="250" width="315" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="calibratedWhite"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -763,10 +763,10 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJr-x2-GNG">
-                                        <rect key="frame" x="127.5" y="622" width="120" height="45"/>
+                                        <rect key="frame" x="97.5" y="622" width="180" height="45"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="EC9-Tk-dbn"/>
+                                            <constraint firstAttribute="width" constant="180" id="EC9-Tk-dbn"/>
                                             <constraint firstAttribute="height" constant="45" id="qMe-vt-iGU"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
@@ -1149,12 +1149,12 @@
                                 <state key="normal" image="button:IGi-cb-GhH:image"/>
                             </button>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2Y-ue-wS3">
-                                <rect key="frame" x="245" y="20" width="130" height="180"/>
+                                <rect key="frame" x="235" y="20" width="140" height="180"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Eo-B9-pba">
-                                        <rect key="frame" x="20" y="10" width="90" height="35"/>
+                                        <rect key="frame" x="20" y="10" width="100" height="35"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="90" id="beD-dK-W9q"/>
+                                            <constraint firstAttribute="width" constant="100" id="beD-dK-W9q"/>
                                             <constraint firstAttribute="height" constant="35" id="cCW-aG-MC0"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -1166,7 +1166,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CwK-NR-nBO">
-                                        <rect key="frame" x="20" y="65" width="90" height="35"/>
+                                        <rect key="frame" x="20" y="65" width="100" height="35"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <state key="normal" title="Group"/>
                                         <connections>
@@ -1174,7 +1174,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRW-2h-DQd">
-                                        <rect key="frame" x="20" y="120" width="90" height="35"/>
+                                        <rect key="frame" x="20" y="120" width="100" height="35"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <state key="normal" title="Location"/>
                                         <connections>
@@ -1184,7 +1184,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="0.70028895547945202" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="130" id="5m7-RI-dVU"/>
+                                    <constraint firstAttribute="width" constant="140" id="5m7-RI-dVU"/>
                                     <constraint firstAttribute="height" constant="180" id="8Ya-8c-wxR"/>
                                     <constraint firstItem="TRW-2h-DQd" firstAttribute="top" secondItem="CwK-NR-nBO" secondAttribute="bottom" constant="20" id="DaW-pj-TEX"/>
                                     <constraint firstItem="9Eo-B9-pba" firstAttribute="centerX" secondItem="I2Y-ue-wS3" secondAttribute="centerX" id="Df5-s3-YDw"/>
