--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -856,7 +856,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Nuy-ul-dqv">
-                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
+                                <rect key="frame" x="0.0" y="90" width="375" height="577"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LanguageTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LanguageTableViewCell" rowHeight="50" id="JO9-xz-Zaw" customClass="LanguageTableViewCell" customModule="LocationTracking" customModuleProvider="target">
@@ -901,7 +901,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WM-SF-Vv9">
-                                <rect key="frame" x="10" y="25" width="35" height="35"/>
+                                <rect key="frame" x="10" y="20" width="35" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Xx4-ID-RyH"/>
                                     <constraint firstAttribute="width" constant="35" id="d3W-Ie-gSp"/>
@@ -914,12 +914,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Nuy-ul-dqv" firstAttribute="top" secondItem="yqM-VN-rFq" secondAttribute="top" constant="80" id="A6J-7V-0Ce"/>
+                            <constraint firstItem="Nuy-ul-dqv" firstAttribute="top" secondItem="yqM-VN-rFq" secondAttribute="top" constant="90" id="A6J-7V-0Ce"/>
                             <constraint firstItem="Nuy-ul-dqv" firstAttribute="leading" secondItem="yqM-VN-rFq" secondAttribute="leading" id="SET-Wh-7EF"/>
+                            <constraint firstItem="2WM-SF-Vv9" firstAttribute="top" secondItem="llD-Ct-GwW" secondAttribute="bottom" id="ca0-Ey-BsJ"/>
                             <constraint firstItem="2WM-SF-Vv9" firstAttribute="leading" secondItem="yqM-VN-rFq" secondAttribute="leading" constant="10" id="iIm-eE-S1Y"/>
                             <constraint firstItem="c5e-Uz-r7h" firstAttribute="top" secondItem="Nuy-ul-dqv" secondAttribute="bottom" id="ncm-4i-cgQ"/>
                             <constraint firstAttribute="trailing" secondItem="Nuy-ul-dqv" secondAttribute="trailing" id="ruT-iz-QFE"/>
-                            <constraint firstItem="2WM-SF-Vv9" firstAttribute="top" secondItem="llD-Ct-GwW" secondAttribute="bottom" constant="5" id="vrP-jo-duO"/>
                         </constraints>
                     </view>
                     <connections>
